modification du fichier docker-compose.yml pour remplacer les volumes des niveaux par un volume unique pour les requêtes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,7 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ./init_database.sql:/init_database.sql
-      - ./niveau_1/:/niveau_1
-      - ./niveau_2/:/niveau_2
-      - ./niveau_3/:/niveau_3
-      - ./niveau_4/:/niveau_4
+      - ./requetes_niveaux/:/requetes_niveaux
       - data:/var/lib/postgresql/data
 
 volumes:
