--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ./init_database.sql:/init_database.sql
-      - ./requetes_niveaux/:/requetes_niveaux
+      - ./src/:/src
       - data:/var/lib/postgresql/data
 
 volumes:
