--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
-version: '3.1'
-
 services:
   db:
     container_name: db_postgres
-    image: postgres:16-alpine
+    build: .
     restart: always
+    env_file:
+      - .env
     environment:
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=db_ratp_sncf  # <- Ajout explicite pour éviter l'erreur de connexion
+    ports:
+      - "5432:5432"
     volumes:
-      - ./init_database.sql:/init_database.sql
-      - ./src/:/src
-      - data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "$POSTGRES_USER", "-d", "$POSTGRES_DB"]
+      interval: 5s
+      retries: 5
 
 volumes:
-  data:
+  postgres_data:
