--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,13 +6,16 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_DB=db_ratp_sncf  # <- Ajout explicite pour éviter l'erreur de connexion
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    # healthcheck pour vérifier la disponibilité
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "$POSTGRES_USER", "-d", "$POSTGRES_DB"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       retries: 5
 
